# moveit_example_apps

./: .gitignore  .travis.yml  CHANGELOG.rst  LICENSE  README.md  moveit_example_apps.rosinstall
.docker/random_pick/: Dockerfile
.rosinstall/random_pick/: random_pick.rosinstall
.travis/random_pick/: before_script.sh
examples/random_pick/random_pick/: CMakeLists.txt  README.md  package.xml
examples/random_pick/random_pick/control/: controllers.yaml
examples/random_pick/random_pick/control/arm/: ur5_bringup.launch  ur5_moveit_planning_execution.launch  ur5_upload.launch
examples/random_pick/random_pick/control/gripper/: hitbot.launch
examples/random_pick/random_pick/gazebo/: gripper_controller_hitbot.yaml  ur5.launch
examples/random_pick/random_pick/launch/demo/: camera.launch  camera_robot.launch  gpd.launch  gpd.yaml  hand_geometry.launch  random_pick.launch  random_pick.yaml  random_pick_fake.launch
examples/random_pick/random_pick/launch/visualize/: visualize_hitbot.launch  visualize_ilc_platform.launch  visualize_ur5.launch
examples/random_pick/random_pick/rviz/: grasp.rviz  ilc_platform_view.rviz  ur5_view.rviz
examples/random_pick/random_pick/scripts/: gripper_server.py
examples/random_pick/random_pick/src/: random_pick.cpp
examples/random_pick/random_pick/urdf/fence/: cage.urdf.xacro  fence.urdf.xacro
examples/random_pick/random_pick/urdf/hitbot/: hitbot.gazebo.xacro  hitbot.urdf.xacro  hitbot_view.urdf.xacro
examples/random_pick/random_pick/urdf/ilc_platform/: ilc_platform.urdf.xacro  platform_view.urdf.xacro
examples/random_pick/random_pick/urdf/meshes/: base.stl  finger.stl  finger_tip.stl  mask.stl
examples/random_pick/random_pick/urdf/ur5_plus/: ur5_hitbot_ilc_platform.urdf.xacro  ur5_ilc_platform.urdf.xacro
examples/random_pick/ur5_hitbot_ilc_platform_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
examples/random_pick/ur5_hitbot_ilc_platform_moveit_config/config/: fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  ros_controllers.yaml  ur5_hitbot_with_ilc_platform.srdf
examples/random_pick/ur5_hitbot_ilc_platform_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit.rviz  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  ur5_hitbot_with_ilc_platform_moveit_controller_manager.launch.xml  warehouse.launch
tutorials/: CMakeLists.txt  README.md  build_locally.sh  conf.py  index.rst  package.xml
tutorials/doc/: template.rst
tutorials/doc/random_pick/: gpd_setup.rst  launch_robots.rst  platform_fence_customization.rst  random_pick.rst  ur5_setup_with_moveit.rst
