<?xml version="1.0"?>
<package>
  <name>random_pick</name>
  <version>0.1.0</version>
  <description>Random pick application using MoveIt Grasp Library plug-in</description>
  <license>BSD</license>

  <author email="sharron.liu@intel.com">Sharron Liu</author>
  <maintainer email="sharron.liu@intel.com">Sharron Liu</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

</package>
